--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,7 @@
     <section id="footer">
         <div class="container">
             <ul class="copyright">
-                <li>&copy; Untitled. All rights reserved.</li>
-                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                <li>Demo Images: <a href="https://unsplash.com/">Unsplash</a></li>
-                <li>Jekyll Template: <a href="http://cloudcannon.com">Cloud Cannon</a></li>
+                <li>&copy; Ruilin Li 2017. All rights reserved.</li>
             </ul>
         </div>
     </section>
