--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,21 +1,14 @@
 
 	<head>
-		<title> Ruilin Li &thinsp; &middot; &thinsp;  Machine Learning @ Georgia Tech</title>
+		<title> {{site.title}}</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="{{ site.baseurl }}/js/jquery.min.js"></script>
-		<script src="{{ site.baseurl }}/js/jquery.scrollzer.min.js"></script>
-		<script src="{{ site.baseurl }}/js/jquery.scrolly.min.js"></script>
-		<script src="{{ site.baseurl }}/js/skel.min.js"></script>
-		<script src="{{ site.baseurl }}/js/skel-layers.min.js"></script>
-		<script src="{{ site.baseurl }}/js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="{{ site.baseurl }}/css/skel.css" />
-			<link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" />
-			<link rel="stylesheet" href="{{ site.baseurl }}/css/style-xlarge.css" />
-		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
+		<link rel="shortcut icon" href="{{site.baseurl}}/images/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="{{site.baseurl}}/images/favicon.ico" type="image/x-icon">
 	</head>
 		
