Correct baseurl issue

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
-		<link rel="shortcut icon" href="{{site.baseurl}}/images/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="{{site.baseurl}}/images/favicon.ico" type="image/x-icon">
 	</head>
 		
