--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!-- Header -->
     <section id="header" class="skel-layers-fixed">
         <header>
-            <span class="image avatar"><img src="{{ site.baseurl }}/images/avatar.jpg" alt="" /></span>
+            <span class="image avatar"><img src="./images/avatar.jpg" alt="" /></span>
             <h1 id="logo"><a href="{{ site.baseurl }}/">Ruilin Li @ GT</a></h1>
             <p>Programmer, Researcher, Thinker</p>
         </header>
