--- a/_includes/content/contact.html
+++ b/_includes/content/contact.html
@@ -1,7 +1,9 @@
 <!-- Contact -->
 	<section id="Contact">
 		<div class="container">
-			<h3>Contact</h3>
+
+			<i class="icon-text fa-envelope"></i> <h3>Contact</h3>
+
 			<p>Email: {{site.email}} <br>
 			Office: {{site.office}}</p>
 
