--- a/_includes/content/miscellaneous.html
+++ b/_includes/content/miscellaneous.html
@@ -1,7 +1,7 @@
 <!-- Miscellaneous -->
 <section id="Miscellaneous">
 	<div class="container">
-		<h3>Teaching</h3>
+		<i class="icon-text fa-university" aria-hidden="true"></i> <h3>Teaching Assistant</h3>
 		<ul>
 			<li>Fall 2016, <a href="http://people.math.gatech.edu/~pralli3/1552.html">Integral Calculus</a></li>
 			<li>Fall 2016, Analysis &#8544;</li>
@@ -10,7 +10,7 @@
 			<li>Spring 2017, Analysis &#8545;</li>
 		</ul>
 
-		<h3>Honors</h3>
+		<i class="icon-text fa-trophy" aria-hidden="true"></i> <h3>Honors</h3>
 		<ul>
 			<li>2016, Star Graduate of Fudan Unversity</li>
 			<li>2016, Outstanding Graduate of Shanghai</li>
