--- a/_includes/content/publication.html
+++ b/_includes/content/publication.html
@@ -1,7 +1,7 @@
 <!-- Publication -->
 <!-- <section id="Publication">
 		<div class="container">
-			<h3>Publication</h3>
+			<i class="icon fa-file-text" aria-hidden="true"></i> <h3>Publication</h3>
 
 			<div class="features">
 				<article>
