--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
             <p>Programmer, Researcher, Thinker</p>
         </header>
         <nav id="nav">
-            <ul>
+            <ul class="icons">
                 <li><a href="#About" class="active">About</a></li>
                 <!-- <li><a href="{{ site.baseurl }}/News">News</a></li> -->
                 <!-- <li><a href="{{ site.baseurl }}/Publication">Publication</a></li> -->
