--- a/_includes/content/news.html
+++ b/_includes/content/news.html
@@ -1,7 +1,7 @@
 <!-- News -->
 <!-- <section id="News">
 	<div class="container">
-		<h3>News</h3>
+		<i class="icon-text fa-newspaper-o" aria-hidden="true"></i> <h3>News</h3>
 		<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 		<ul class="feature-icons">
 			<li class="fa-code">Write all the code</li>
