--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,8 @@
 		<title> {{site.title}}</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="This is Ruilin Li's homepage" />
+		<meta name="keywords" content="Ruilin Li, Georgia Tech, Machine Learning" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
