--- a/_includes/content/blog.html
+++ b/_includes/content/blog.html
@@ -7,14 +7,15 @@
 			<div class="features">
 				{% for post in site.posts %}
 				    <article>
-				    	 <a href="#" class="image">
-				    	 	<img src="images/pic01.jpg">
+				    	 <a href="{{ site.baseurl }}/{{post.url}}" class="image">
+				    	 	<img src="{{ site.baseurl }}/images/{{ post.image }}">
 				    	 </a>
 				    	 <div class="inner">
-				    	 	 <h4><a href="./_posts/2017-03-22-Paper-Reading-Summary.md">{{ post.title }}</a></h4>
+				    	 	 <h4><a href="{{ site.baseurl }}\{{post.url}}">{{ post.title }}</a></h4>
+				    	 	
 				    	 	 {{ post.date | date_to_string }}
+				    	 	  <p>{{post.meta}}</p>
 				    	 </div>
-				    	<!--  <hr /> -->
 				    </article>
 				       
 				{% endfor %}
