--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,9 +6,9 @@
 		<meta name="description" content="This is Ruilin Li's homepage" />
 		<meta name="keywords" content="Ruilin Li, Georgia Tech, Machine Learning" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="css/main.css" />
+		<link rel="stylesheet" href="{{ site.baseurl }}/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
-		<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="{{ site.baseurl}}/images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="{{site.baseurl}}/images/favicon.ico" type="image/x-icon">
 	</head>
 		
