--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,18 @@
 <!-- Header -->
     <section id="header" class="skel-layers-fixed">
         <header>
-            <span class="image avatar"><img src="./images/avatar.jpg" alt="" /></span>
+            <span class="image avatar"><img src="{{ site.baseurl }}/images/avatar.jpg" alt="" /></span>
             <h1 id="logo"><a href="{{ site.baseurl }}/">Ruilin Li @ GT</a></h1>
             <p>Programmer, Researcher, Thinker</p>
         </header>
         <nav id="nav">
             <ul class="icons">
-                <li><a href="#About" class="active">About</a></li>
+                <li><a href="{{ site.baseurl}}/index.html/#About" class="active">About</a></li>
                 <!-- <li><a href="{{ site.baseurl }}/News">News</a></li> -->
                 <!-- <li><a href="{{ site.baseurl }}/Publication">Publication</a></li> -->
-                <li><a href="#Blog">Blog</a></li>
-                <li><a href="#Miscellaneous">Miscellaneous</a></li>
-                <li><a href="#Contact">Contact</a></li>
+                <li><a href="{{ site.baseurl}}/index.html/#Blog">Blog</a></li>
+                <li><a href="{{ site.baseurl}}/index.html/#Miscellaneous">Miscellaneous</a></li>
+                <li><a href="{{ site.baseurl}}/index.html/#Contact">Contact</a></li>
             </ul>
         </nav>
         <footer>
