--- a/_includes/content/blog.html
+++ b/_includes/content/blog.html
@@ -13,7 +13,7 @@
 				    	 <div class="inner">
 				    	 	 <h4><a href="{{ site.baseurl }}\{{post.url}}">{{ post.title }}</a></h4>
 				    	 	
-				    	 	 {{ post.date | date_to_string }}
+				    	 	 <p style="font-size: 80%">{{ post.date | date_to_string }}</p>
 				    	 	  <p>{{post.meta}}</p>
 				    	 </div>
 				    </article>
