--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 ---
+<script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" async>
+</script>
+
 <section>
     <div class="container">
         <header class="major">
