--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,28 +1,102 @@
----
-layout: default
----
-<script type="text/javascript"
-    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" async>
-</script>
-
-<section>
-    <div class="container">
-        <header class="major">
-            <h2>{{ page.title }}</h2>
-                <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}</p>
-        </header>
-
-        <section class="post-content">
-            {{ content }}
-        </section>
+<!DOCTYPE HTML>
+<!--
+    Read Only by HTML5 UP
+    html5up.net | @n33co
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+    
+    <head>
+        <title> Ruilin Li  &middot;  Machine Learning @ Georgia Tech</title>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="description" content="This is Ruilin Li's homepage" />
+        <meta name="keywords" content="Ruilin Li, Georgia Tech, Machine Learning" />
+        <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+        <link rel="stylesheet" href="/ruilin-li.github.io/css/main.css" />
+        <!--[if lte IE 8]><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
+        <link rel="shortcut icon" href="/ruilin-li.github.io/images/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/ruilin-li.github.io/images/favicon.ico" type="image/x-icon">
+    </head>
         
-        <footer>
-            {% if page.previous %}
-            <a href="{{ page.previous.url }}" class="float-left">&larr; Previous post</a> {% endif %}
-            {% if page.next %}
-            <a href="{{ page.next.url }}" class="float-right">Next post &rarr;</a> {% endif %}
-        </footer>
-
-    </div>
-
+    <body>
+        <!-- Header -->
+<section id="header" class="skel-layers-fixed">
+    <header>
+        <span class="image avatar"><img src="/ruilin-li.github.io/images/avatar.jpg" alt="" /></span>
+        <h1 id="logo"><a href="/ruilin-li.github.io/">Ruilin Li @ GT</a></h1>
+        <p>Programmer, Researcher, Thinker</p>
+    </header>
+    <nav id="nav">
+        <ul class="icons">
+            <li><a href="{{ site.baseurl }}/index.html" class="active">Back to Mainpage</a></li>
+        </ul>
+    </nav>
+    <footer>
+        <ul class="icons">
+            <li><a href="http://github.com/ruilin-li" class="icon fa-github"><span class="label">Github</span></a></li>
+            <li><a href="mailto:ruilin.li@gatech.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
+            <li><a href="https://www.linkedin.com/in/ruilin-li-b71448bb/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+        </ul>
+    </footer>
 </section>
+
+
+        <div id="wrapper">
+            <!-- Main -->
+            <div id="main">
+                <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" async></script>
+
+                <section>
+                    <div class="container">
+                        <header class="major">
+                            <h2>{{ page.title }}</h2>
+                                <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}</p>
+                        </header>
+
+                        <section class="post-content">
+                            {{ content }}
+                        </section>
+                        
+                        <footer>
+                            {% if page.previous %}
+                            <a href="{{ page.previous.url }}" class="float-left">&larr; Previous post</a> {% endif %}
+                            {% if page.next %}
+                            <a href="{{ page.next.url }}" class="float-right">Next post &rarr;</a> {% endif %}
+                        </footer>
+
+                    </div>
+
+                </section>
+   
+
+
+
+
+    
+
+<!-- Scripts -->
+<script src="/ruilin-li.github.io/js/jquery.min.js"></script>
+<script src="/ruilin-li.github.io/js/jquery.scrollzer.min.js"></script>
+<script src="/ruilin-li.github.io/js/jquery.scrolly.min.js"></script>
+<script src="/ruilin-li.github.io/js/skel.min.js"></script>
+<script src="/ruilin-li.github.io/js/util.js"></script>
+<!--[if lte IE 8]><script src="js/ie/respond.min.js"></script><![endif]-->
+<script src="/ruilin-li.github.io/js/main.js"></script>
+
+
+
+            </div>
+            <!-- Footer -->
+
+<section id="footer">
+    <div class="container">
+        <ul class="copyright">
+            <li>&copy; Ruilin Li 2017. All rights reserved.</li>
+        </ul>
+    </div>
+</section>
+
+        </div>
+    </body>
+</html>
