--- a/_includes/content/miscellaneous.html
+++ b/_includes/content/miscellaneous.html
@@ -3,11 +3,13 @@
 	<div class="container">
 		<i class="icon-text fa-university" aria-hidden="true"></i> <h3>Teaching Assistant</h3>
 		<ul>
-			<li>Fall 2016, <a href="http://people.math.gatech.edu/~pralli3/1552.html">Integral Calculus</a></li>
-			<li>Fall 2016, Analysis &#8544;</li>
-			<li>Spring 2017, <a href="http://people.math.gatech.edu/~klarag/teaching.html">Integral Calculus</a></li>
-			<li>Spring 2017, <a href="http://www.cc.gatech.edu/~echow/cse6643.html">Numerical Linear Algebra</a></li>
-			<li>Spring 2017, Analysis &#8545;</li>
+			<li>Fall 2016, MATH 1552 <a href="http://people.math.gatech.edu/~pralli3/1552.html">Integral Calculus</a></li>
+			<li>Fall 2016, MATH 4317 Analysis &#8544;</li>
+			<li>Spring 2017, MATH 1552 <a href="http://people.math.gatech.edu/~klarag/teaching.html">Integral Calculus</a></li>
+			<li>Spring 2017, CSE 6643 <a href="http://www.cc.gatech.edu/~echow/cse6643.html">Numerical Linear Algebra</a></li>
+			<li>Spring 2017, MATH 4318 Analysis &#8545;</li>
+			<li>Summer 2017, MATH 2550 Introduction to Multivariate Calculus</li>
+			<li>Fall 2017, MATH 1554 Linear Algebra</li>
 		</ul>
 
 		<i class="icon-text fa-trophy" aria-hidden="true"></i> <h3>Honors</h3>
@@ -22,6 +24,11 @@
 			<li>2014, National Scholarship</li>
 			<li>2013, National Scholarship</li>
 			<li>2013, Meritorious Winner, Interdisciplinary Contest in Modeling (ICM)</li>
+		</ul>
+
+		<i class="icon-text fa-external-link" aria-hidden="true"></i> <h3>Pointers</h3>
+		<ul>
+			<li>An excellent explanation on <a href="https://distill.pub/2017/momentum/">Momentum</a> optimization </li>
 		</ul>
 	</div>
 </section>
