--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,13 @@
-
-	<head>
-		<title> {{site.title}}</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="This is Ruilin Li's homepage" />
-		<meta name="keywords" content="Ruilin Li, Georgia Tech, Machine Learning" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="{{ site.baseurl }}/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
-		<link rel="shortcut icon" href="{{ site.baseurl}}/images/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="{{site.baseurl}}/images/favicon.ico" type="image/x-icon">
-	</head>
-		
+<head>
+	<title> {{site.title}}</title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description" content="This is Ruilin Li's homepage" />
+	<meta name="keywords" content="Ruilin Li, Georgia Tech, Machine Learning" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
+	<link rel="shortcut icon" href="{{ site.baseurl}}/images/gt-icon.png" type="image/x-icon">
+	<link rel="icon" href="{{site.baseurl}}/images/gt-icon.png" type="image/x-icon">
+</head>
+	
