--- a/_includes/content/miscellaneous.html
+++ b/_includes/content/miscellaneous.html
@@ -3,26 +3,25 @@
 	<div class="container">
 		<i class="icon-text fa-university" aria-hidden="true"></i> <h3>Teaching Assistant</h3>
 		<ul>
-			<li>Fall 2017, MATH 1554 Linear Algebra</li>
-			<li>Summer 2017, MATH 2550 Introduction to Multivariate Calculus</li>
-			<li>Spring 2017, MATH 1552 <a href="http://people.math.gatech.edu/~klarag/teaching.html">Integral Calculus</a></li>
-			<li>Spring 2017, CSE 6643 <a href="http://www.cc.gatech.edu/~echow/cse6643.html">Numerical Linear Algebra</a></li>
-			<li>Spring 2017, MATH 4318 Analysis &#8545;</li>
-			<li>Fall 2016, MATH 1552 <a href="http://people.math.gatech.edu/~pralli3/1552.html">Integral Calculus</a></li>
-			<li>Fall 2016, MATH 4317 Analysis &#8544;</li>
+			<li>[<a href="http://people.math.gatech.edu/~sbarone7/ma1552s18.html">Spring 2018</a>,  <a href="http://people.math.gatech.edu/~klarag/teaching.html">Spring 2017</a>,  <a href="http://people.math.gatech.edu/~pralli3/1552.html">Fall 2016</a>] MATH 1552 Integral Calculus</li>
+			<li>[Fall 2017] MATH 1554 Linear Algebra</li>
+			<li>[Summer 2017] MATH 2550 Introduction to Multivariate Calculus</li>
+			<li>[<a href="http://www.cc.gatech.edu/~echow/cse6643.html">Spring 2017</a>] CSE 6643 Numerical Linear Algebra</li>
+			<li>[<a href="http://people.math.gatech.edu/~heitsch/Teaching/4318-sp12.html">Spring 2017</a>] MATH 4318 Analysis &#8545;</li>
+			<li>[<a href="http://people.math.gatech.edu/~heitsch/Teaching/4317b-f11.html">Fall 2016</a>] MATH 4317 Analysis &#8544;</li>
 		</ul>
 
 		<i class="icon-text fa-trophy" aria-hidden="true"></i> <h3>Honors</h3>
 		<ul>
-			<li>2016, Outstanding Graduate of Fudan Unversity</li>
-			<li>2016, Outstanding Graduate of Shanghai</li>
-			<li>2015, Team Silver Medal, 6th Shing-Tung Yau College Student Mathematics Contests</li>
-			<li>2015, First Prize, 6th Chinese Undergraduate Mathematics Competitions</li>
-			<li>2015, Simpleway First-Class Scholarship</li>
-			<li>2015, Tower Waterson Scholarship</li>
-			<li>2014, Ranked 5th, Shenzhen Cup Summer Invitational in Mathematical Modeling</li>
-			<li>2013, 2014 National Scholarship</li>
-			<li>2013, Meritorious Winner, Interdisciplinary Contest in Modeling (ICM)</li>
+			<li>[2016] Outstanding Graduate of Fudan Unversity</li>
+			<li>[2016] Outstanding Graduate of Shanghai</li>
+			<li>[2015] Team Silver Medal, 6th Shing-Tung Yau College Student Mathematics Contests</li>
+			<li>[2015] First Prize, 6th Chinese Undergraduate Mathematics Competitions</li>
+			<li>[2015] Simpleway First-Class Scholarship</li>
+			<li>[2015] Tower Waterson Scholarship</li>
+			<li>[2014] Ranked 5th, Shenzhen Cup Summer Invitational in Mathematical Modeling</li>
+			<li>[2013, 2014] National Scholarship</li>
+			<li>[2013] Meritorious Winner, Interdisciplinary Contest in Modeling (ICM)</li>
 		</ul>
 
 		<i class="icon-text fa-external-link" aria-hidden="true"></i> <h3>Resources</h3>
