--- a/_includes/content/blog.html
+++ b/_includes/content/blog.html
@@ -1,5 +1,5 @@
 <!-- Blog -->
-	<section id="Blog">
+<!-- 	<section id="Blog">
 		<div class="container">
 				
 			<i class="icon-text fa-rss"></i> <h3>Blog</h3> 
@@ -22,4 +22,4 @@
 			</div>
 				
 		</div>
-	</section>
+	</section> -->
