delete news and blogs

--- a/_includes/content/news.html
+++ b/_includes/content/news.html
@@ -1,5 +1,5 @@
 <!-- News -->
-<section id="News">
+<!-- <section id="News">
 	<div class="container">
 		<i class="icon-text fa-newspaper-o" aria-hidden="true"></i> <h3>News</h3>
 		<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
@@ -12,4 +12,4 @@
 			<li class="fa-users">Shadow clone technique</li>
 		</ul>
 	</div>
-</section>
+</section> -->
