add first publication

--- a/_includes/content/miscellaneous.html
+++ b/_includes/content/miscellaneous.html
@@ -1,7 +1,7 @@
 <!-- Miscellaneous -->
 <section id="Miscellaneous">
 	<div class="container">
-		<i class="icon-text fa-university" aria-hidden="true"></i> <h3>Teaching Assistant</h3>
+		<i class="icon-text fa-university" aria-hidden="true"></i> <h3>Teaching</h3>
 		<ul>
 			<li>[<a href="http://people.math.gatech.edu/~sbarone7/ma1552s18.html">Spring 2018</a>,  <a href="http://people.math.gatech.edu/~klarag/teaching.html">Spring 2017</a>,  <a href="http://people.math.gatech.edu/~pralli3/1552.html">Fall 2016</a>] MATH 1552 Integral Calculus</li>
 			<li>[Fall 2017] MATH 1554 Linear Algebra</li>
