--- a/_includes/content/publication.html
+++ b/_includes/content/publication.html
@@ -1,17 +1,28 @@
 <!-- Publication -->
-<!-- <section id="Publication">
+<section id="Publication">
 		<div class="container">
-			<i class="icon fa-file-text" aria-hidden="true"></i> <h3>Publication</h3>
+			<i class="icon-text fa-file-text" aria-hidden="true"></i> <h3>Preprints</h3>
+
+			
 
 			<div class="features">
 				<article>
-					<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-					<div class="inner">
-						<h4>Possibly broke spacetime</h4>
-						<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-					</div>
+					<!-- <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a> -->
+					<!-- <div class="inner"> -->
+						
+						<h4> Learning to Recommend via Inverse Optimal Matching </h4>
+						<p>
+							<u>Ruilin Li</u>,
+							Xiaojing Ye,
+							Haomin Zhou,
+							Hongyuan Zha
+							[<a href="https://arxiv.org/pdf/1802.03644.pdf"> pdf </a>]
+						</p>
+						
+						
+					<!-- </div> -->
 				</article>
-				<article>
+				<!-- <article>
 					<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 					<div class="inner">
 						<h4>Terraformed a small moon</h4>
@@ -24,7 +35,8 @@
 						<h4>Snapped dark matter in the wild</h4>
 						<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 					</div>
-				</article>
+				</article> -->
 			</div>
+			<!-- <i class="icon-text fa-file-text" aria-hidden="true"></i> <h3>Publication</h3> -->
 		</div>
-	</section> -->
+	</section>
