add documents directory

--- a/_includes/content/contact.html
+++ b/_includes/content/contact.html
@@ -4,8 +4,11 @@
 
 			<i class="icon-text fa-envelope"></i> <h3>Contact</h3>
 
-			<p>Email: {{site.email}} <br>
-			Office: {{site.office}}</p>
+			<p>
+				Email: {{site.email}} <br>
+				Office: Skiles 146B <br>
+				Address: 686 Cherry St NW, Atlanta, GA 30313
+			</p>
 
 			<div id="map" style="width: auto; height: 400px; border-radius: 25x"></div>
 
