--- a/_includes/content/miscellaneous.html
+++ b/_includes/content/miscellaneous.html
@@ -1,7 +1,7 @@
 <!-- Miscellaneous -->
 <section id="Miscellaneous">
 	<div class="container">
-		<i class="icon-text fa-university" aria-hidden="true"></i> <h3>Teaching</h3>
+		<i class="icon-text fa-university" aria-hidden="true"></i> <h3>Teaching Assitant</h3>
 		<ul>
 			<li>[<a href="http://people.math.gatech.edu/~sbarone7/ma1552s18.html">Spring 2018</a>,  <a href="http://people.math.gatech.edu/~klarag/teaching.html">Spring 2017</a>,  <a href="http://people.math.gatech.edu/~pralli3/1552.html">Fall 2016</a>] MATH 1552 Integral Calculus</li>
 			<li>[Fall 2017] MATH 1554 Linear Algebra</li>
@@ -16,7 +16,7 @@
 			<li>[2016] Outstanding Graduate of Fudan Unversity</li>
 			<li>[2016] Outstanding Graduate of Shanghai</li>
 			<li>[2015] Team Silver Medal, 6th Shing-Tung Yau College Student Mathematics Contests</li>
-			<li>[2015] First Prize, 6th Chinese Undergraduate Mathematics Competitions</li>
+			<li>[2015] First Prize, 6th National College Student Mathematics Competitions</li>
 			<li>[2015] Simpleway First-Class Scholarship</li>
 			<li>[2015] Tower Waterson Scholarship</li>
 			<li>[2014] Ranked 5th, Shenzhen Cup Summer Invitational in Mathematical Modeling</li>
@@ -27,6 +27,8 @@
 		<i class="icon-text fa-external-link" aria-hidden="true"></i> <h3>Resources</h3>
 		<ul>
 			<li>An excellent explanation on <a href="https://distill.pub/2017/momentum/">Momentum</a> optimization </li>
+classical reference on <a href="https://www.cs.cmu.edu/~quake-papers/painless-conjugate-gradient.pdf">Conjugate Gradient</a> method </li>
+			
 		</ul>
 	</div>
 </section>
